# cpp-hft-bot

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/exchanges/binance/: BinanceConnection.cpp  BinanceConnection.hpp
src/exchanges/bitget/: BitgetConnection.cpp  BitgetConnection.hpp
src/exchanges/hyperliquid/: HyperliquidConnection.cpp  HyperliquidConnection.hpp
src/exchanges/okx/: okxConnection.cpp  okxConnection.hpp
